--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "pushDist": "git subtree push --prefix dist origin gh-pages",
     "watch": "webpack --watch",
     "build": "webpack",
     "start": "webpack serve --open"
